--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,3 @@
-title: ClubHub
-description: The hub for all of UH Manoa's Clubs 
-google_analytics:
-show_downloads: false
-theme: jekyll-theme-cayman
-remote_theme: pages-themes/tactile@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: jekyll-theme-time-machine
 
-gems:
-  - jekyll-mentions
+
