--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Manoa Community Connect
 github:
   is_project_page: true
-  repository_url: https://github.com/code-autonomy/manoa-club-connect
+  repository_url: https://github.com/code-autonomy
 theme: jekyll-theme-time-machine
 
 
