--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Manoa Community Connect
+title: Manoa Club Connect
 github:
   is_project_page: true
   repository_url: https://github.com/code-autonomy
